# PaperDigest

./: .gitignore  .gitmodules  BATCH_API_TEST_REPORT.md  GEMINI_INTEGRATION_SUMMARY.md  README.md  build_vercel.sh  config.toml  keywords.json  melt.ipynb  pyproject.toml  requirements.txt  template.j2  vercel.json
content/: 2412.10133.md  2412.11373.md  2412.11704.md  2412.14354.md  2412.15921.md  2501.14249.md  2501.17176.md  2502.01563.md  2502.05945.md  2502.11569.md  2502.12486.md  2502.14644.md  2502.14866.md  2502.15147.md  2502.15709.md  2502.17419.md  2502.18036.md  2502.18137.md  2503.00992.md  2503.01713.md  2503.01840.md  2503.02497.md  2503.04606.md  2503.08727.md  2503.09572.md  2503.10566.md  2503.12790.md  2503.16419.md  2503.16743.md  2503.17987.md  2503.23798.md  2503.23895.md  2504.02263.md  2504.15785.md  2504.15801.md  2504.15909.md  2504.15930.md  2504.15983.md  2504.16023.md  2504.16056.md  (+57 more)
docs/: DEBUG_FIX_REPORT.md  GEMINI_GUIDE.md  GITHUB_ACTION_MARKER_FIX_COMPLETE_REPORT.md  IMPLEMENTATION_COMPLETE.md  LATEX2JSON_DEBUG_GUIDE.md  LATEX2JSON_INTEGRATION_REPORT.md  MARKER_FIX_FINAL_SOLUTION.md  MARKER_FIX_README.md  MARKER_OUTPUT_STRUCTURE_FIX.md  NAN_DEBUG_REPORT.md  NAN_DIAGNOSTIC_GUIDE.md  NAN_SOLUTION_FINAL.md  PDF_EXTRACTOR_GUIDE.md  PROJECT_STRUCTURE.md  WORKFLOW_OPTIMIZATION.md
examples/: summary_example_en.json
notebook/: vectordb.ipynb
preference/: 1.csv  2025-05.csv  2025-06.csv  2025-10.csv  init.csv
raw/: 2412.10133.json  2412.11373.json  2412.11704.json  2412.14354.json  2412.15921.json  2501.14249.json  2501.17176.json  (+90 more)
(+81 files in other folders)
