[project]
name = ""
version = "0.0.1"
dependencies = [
    "scikit-learn",
    "numpy",
    "polars",
    "tqdm",
    "arxiv",
    "toml",
    "loguru",
    "huggingface-hub[cli]",
    "openai",
    "jinja2",
    "pydantic",
    "tiktoken",
    "psutil",
    "requests",
    "google-genai",
]

[project.optional-dependencies]
marker = [
    "marker-pdf",
]

[tool.uv]
package = false
