[project]
name = "paperdigest"
version = "0.0.1"
description = "AI-powered paper recommendation and digest system"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Yikai Liao", email = "yikai@example.com" }
]
dependencies = [
    "scikit-learn",
    "numpy",
    "polars",
    "tqdm",
    "arxiv",
    "toml",
    "loguru",
    "huggingface-hub[cli]",
    "openai",
    "jinja2",
    "pydantic",
    "tiktoken",
    "psutil",
    "requests",
    "google-genai",
]

[project.optional-dependencies]
marker = [
    "marker-pdf",
]

[tool.uv]
package = false
